--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="src\02_Shader\Application.cpp" />
     <ClCompile Include="src\03_Texture\Application.cpp" />
     <ClCompile Include="src\04_Transform\Application.cpp" />
+    <ClCompile Include="src\05_Coordinate\Application.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Tool\shader.h" />
@@ -37,6 +38,8 @@
     <None Include="src\03_Texture\Shader\vertex.glsl" />
     <None Include="src\04_Transform\Shader\fragment.glsl" />
     <None Include="src\04_Transform\Shader\vertex.glsl" />
+    <None Include="src\05_Coordinate\Shader\fragment.glsl" />
+    <None Include="src\05_Coordinate\Shader\vertex.glsl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
