--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\04_Transform\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\05_Coordinate\Application.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Tool\shader.h">
@@ -45,5 +48,7 @@
     <None Include="src\03_Texture\Shader\vertex.glsl" />
     <None Include="src\04_Transform\Shader\fragment.glsl" />
     <None Include="src\04_Transform\Shader\vertex.glsl" />
+    <None Include="src\05_Coordinate\Shader\fragment.glsl" />
+    <None Include="src\05_Coordinate\Shader\vertex.glsl" />
   </ItemGroup>
 </Project>
