--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -25,8 +25,10 @@
     <ClCompile Include="src\03_Texture\Application.cpp" />
     <ClCompile Include="src\04_Transform\Application.cpp" />
     <ClCompile Include="src\05_Coordinate\Application.cpp" />
+    <ClCompile Include="src\06_Camera\Application.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Tool\camera.h" />
     <ClInclude Include="include\Tool\shader.h" />
   </ItemGroup>
   <ItemGroup>
@@ -40,6 +42,8 @@
     <None Include="src\04_Transform\Shader\vertex.glsl" />
     <None Include="src\05_Coordinate\Shader\fragment.glsl" />
     <None Include="src\05_Coordinate\Shader\vertex.glsl" />
+    <None Include="src\06_Camera\Shader\fragment.glsl" />
+    <None Include="src\06_Camera\Shader\vertex.glsl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
