--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -20,30 +20,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="D:\OpenGL\glad.c" />
-    <ClCompile Include="src\01_Hello_Triangle\Application.cpp" />
-    <ClCompile Include="src\02_Shader\Application.cpp" />
-    <ClCompile Include="src\03_Texture\Application.cpp" />
-    <ClCompile Include="src\04_Transform\Application.cpp" />
-    <ClCompile Include="src\05_Coordinate\Application.cpp" />
-    <ClCompile Include="src\06_Camera\Application.cpp" />
+    <ClCompile Include="src\08_Lighting\Appication.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Tool\camera.h" />
     <ClInclude Include="include\Tool\shader.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\02_Shader\Shader\fragment.glsl" />
-    <None Include="src\02_Shader\Shader\fragmentUniform.glsl" />
-    <None Include="src\02_Shader\Shader\vertex.glsl" />
-    <None Include="src\02_Shader\Shader\vertexWithColor.glsl" />
-    <None Include="src\03_Texture\Shader\fragment.glsl" />
-    <None Include="src\03_Texture\Shader\vertex.glsl" />
-    <None Include="src\04_Transform\Shader\fragment.glsl" />
-    <None Include="src\04_Transform\Shader\vertex.glsl" />
-    <None Include="src\05_Coordinate\Shader\fragment.glsl" />
-    <None Include="src\05_Coordinate\Shader\vertex.glsl" />
-    <None Include="src\06_Camera\Shader\fragment.glsl" />
-    <None Include="src\06_Camera\Shader\vertex.glsl" />
+    <None Include="src\08_Lighting\Shader\fragment.glsl" />
+    <None Include="src\08_Lighting\Shader\lightFragment.glsl" />
+    <None Include="src\08_Lighting\Shader\lightVertex.glsl" />
+    <None Include="src\08_Lighting\Shader\vertex.glsl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
