--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="D:\OpenGL\glad.c">
       <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\08_Lighting\Appication.cpp">
+    <ClCompile Include="src\09_Material\Appication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -31,9 +31,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\08_Lighting\Shader\fragment.glsl" />
-    <None Include="src\08_Lighting\Shader\lightFragment.glsl" />
-    <None Include="src\08_Lighting\Shader\lightVertex.glsl" />
-    <None Include="src\08_Lighting\Shader\vertex.glsl" />
+    <None Include="src\09_Material\Shader\fragment.glsl" />
+    <None Include="src\09_Material\Shader\lightFragment.glsl" />
+    <None Include="src\09_Material\Shader\lightVertex.glsl" />
+    <None Include="src\09_Material\Shader\vertex.glsl" />
   </ItemGroup>
 </Project>
