--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="D:\OpenGL\glad.c" />
-    <ClCompile Include="src\16_Blending\main.cpp" />
+    <ClCompile Include="src\17_FrameBuffers\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Tool\camera.h" />
@@ -30,7 +30,9 @@
     <ClInclude Include="include\Tool\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\16_Blending\Shader\blendingFragment.glsl" />
+    <None Include="src\17_FrameBuffers\Shader\blendingFragment.glsl" />
+    <None Include="src\17_FrameBuffers\Shader\screenFragment.glsl" />
+    <None Include="src\17_FrameBuffers\Shader\screenVertex.glsl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
