--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -30,9 +30,7 @@
     <ClInclude Include="include\Tool\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\17_FrameBuffers\Shader\blendingFragment.glsl" />
-    <None Include="src\17_FrameBuffers\Shader\screenFragment.glsl" />
-    <None Include="src\17_FrameBuffers\Shader\screenVertex.glsl" />
+    <None Include="src\17_FrameBuffers\Shader\outlineGeometry.glsl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
