--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="D:\OpenGL\glad.c">
       <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\17_FrameBuffers\main.cpp">
+    <ClCompile Include="src\18_Skybox\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -40,6 +40,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\17_FrameBuffers\Shader\outlineGeometry.glsl" />
+    <None Include="src\18_Skybox\Shader\skyboxVertex.glsl" />
+    <None Include="src\18_Skybox\Shader\skyboxFragment.glsl" />
   </ItemGroup>
 </Project>
